# include-wgsl-oil

./: Cargo.toml  README.md  SPECIFICATION.md
.github/workflows/: ci.yml
ewgsl/: Cargo.toml  README.md
ewgsl/src/: arena.rs  composition.rs  lib.rs  parsing.rs  spans.rs
ewgsl/src/composition/: file_spans.rs
ewgsl/src/parsing/: alias.rs  attributes.rs  const_assert.rs  directives.rs  ewgsl.pest  expression.rs  functions.rs  ident.rs  statements.rs  structs.rs  text_spans.rs  variables.rs
examples/exported_structs/: definitions.wgsl  main.rs
examples/item_imports/: main.rs  main.wgsl  utils.wgsl
examples/multilayered_imports/: main.rs
examples/multilayered_imports/shaders/: fragment_shader.wgsl  vertex_shader.wgsl
examples/multilayered_imports/shaders/shared/: shared.wgsl
examples/simple_multifile_shader/: fragment_shader.wgsl  main.rs  vertex_shader.wgsl
include_macro/: Cargo.toml  README.md
include_macro/examples/exported_struct/: README.md  main.rs  main.wgsl
include_macro/examples/imported_shaders/: general.wgsl  main.rs
include_macro/examples/imported_shaders/dir1/: foo.wgsl  mod.rs
include_macro/examples/imported_shaders/dir2/dir3/: mod.rs
include_macro/src/: lib.rs  result.rs  source.rs
include_macro/src/source/: defs.rs  sources.rs
src/: error.rs  exports.rs  files.rs  imports.rs  lib.rs  module.rs  result.rs  source.rs
