[package]
name = "include-wgsl-oil"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Includes a WGSL file with the `naga-oil` preprocessor. "
homepage = "https://github.com/LucentFlux/include-wgsl-oil"
repository = "https://github.com/LucentFlux/include-wgsl-oil"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
syn = { version = "1.0", features = ["full"] }
naga = { version = "0.13", features = ["wgsl-in", "wgsl-out"] }
naga_oil = "0.9"
naga-to-tokenstream = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
glob = "0.3"
pathdiff = "0.2"
regex = "1.9"
lazy_static = "1.4"

[lib]
proc-macro = true

[features]
minify = ["naga-to-tokenstream/minify"]
glam = ["naga-to-tokenstream/glam"]
naga = ["naga-to-tokenstream/naga"]
encase = ["naga-to-tokenstream/encase"]