[package]
name = "include-wgsl-oil"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "Includes a WGSL file with the `naga-oil` preprocessor. "
homepage = "https://github.com/LucentFlux/include-wgsl-oil"
repository = "https://github.com/LucentFlux/include-wgsl-oil"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
naga = { version = "0.14", features = ["wgsl-in", "wgsl-out"] }
naga_oil = "0.11"
naga-to-tokenstream = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
glob = "0.3"
pathdiff = "0.2"
regex = "1.9"
lazy_static = "1.4"
daggy = "0.8"

# Try to get cargo to match versions with naga and naga_oil by having a huge range
data-encoding = "2" 

[dev-dependencies]
encase = {version = "0.6", features = ["glam"]}
glam = "0.25"

[lib]
proc-macro = true

[features]
minify = ["naga-to-tokenstream/minify"]
glam = ["naga-to-tokenstream/glam"]
naga = ["naga-to-tokenstream/naga"]
encase = ["naga-to-tokenstream/encase"]