[package]
name = "ewgsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
strum = { version = "0.25", features = ["derive"] }
lazy_static = "1.4"
codespan-reporting = "0.11"
perfect-derive = "0.1"

[dev-dependencies]
rstest = "0.18.2"