[package]
name = "ewgsl"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
strum = { version = "0.25", features = ["derive"] }
lazy_static = "1.4"
codespan-reporting = "0.11"
perfect-derive = "0.1"

[dev-dependencies]
rstest = "0.18.2"
# We depend on our own package so that we can enable non-default features that the tests need
ewgsl = { path = ".", default-features = false, features = ["eq", "span_erasure"] } 

[features]
default = [] 
eq = []
span_erasure = []
