[package]
name = "include-ewgsl"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Includes an EWGSL file. "
homepage = "https://github.com/LucentFlux/ewgsl"
repository = "https://github.com/LucentFlux/ewgsl"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
syn = { version = "1.0", features = ["full"] }
naga = { version = "0.13", features = ["wgsl-in", "wgsl-out"] }
naga_oil = "0.9"
naga-to-tokenstream = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
glob = "0.3"
pathdiff = "0.2"
regex = "1.9"
lazy_static = "1.4"
thiserror = "1.0"
rustversion = "1.0"

[dev-dependencies]
encase = {version = "0.6", features = ["glam"]}
glam = "0.24"

[lib]
proc-macro = true

[features]
unstable = []
minify = ["naga-to-tokenstream/minify"]
glam = ["naga-to-tokenstream/glam"]
naga = ["naga-to-tokenstream/naga"]
encase = ["naga-to-tokenstream/encase"]